--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nsleta/backoff",
+    "name": "nsleta/exponentialBackoff",
     "description": "",
     "keywords": ["retry", "exponentialbackoff"],
     "homepage": "https://github.com/nsleta/backoff",
